--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,13 @@
     <string name="app_name">Design App</string>
     <string name="show_dialog_info">Info Dialog</string>
     <string name="show_dialog_warning">Warning Dialog</string>
+    <string name="show_colored_toast">Colored Toast</string>
     <string name="recycle_activity">Multi-type RecycleView</string>
     <string name="dialog_message">Warning</string>
     <string name="button_more">More</string>
     <string name="button_positive">Yes</string>
     <string name="button_negative">Cancel</string>
+    <string name="toast_blue">Blue Toast</string>
+    <string name="toast_green">Green Toast</string>
+    <string name="toast_yellow">Yellow Toast</string>
 </resources>
