--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="show_dialog_warning">Warning Dialog</string>
     <string name="show_colored_toast">Colored Toast</string>
     <string name="recycle_activity">Multi-type RecycleView</string>
-    <string name="start_progress">Start Progress</string>
+    <string name="start_progress"> >> Start Progress</string>
     <string name="dialog_message">Warning</string>
     <string name="button_more">More</string>
     <string name="button_positive">Yes</string>
@@ -15,6 +15,6 @@
     <string name="toast_green">Green Toast</string>
     <string name="toast_yellow">Yellow Toast</string>
     <string name="circle_progress_bar">Circle ProgressBar</string>
-    <string name="music_name">When You Love Someone</string>
-    <string name="artist_name">Bethany Dillon</string>
+    <string name="music_name">See You Again</string>
+    <string name="artist_name">Wiz Khalifa/Charlie Puth</string>
 </resources>
